--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "react-native-dropbox-chooser",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "DropboxChooser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
+  "peerDependencies": {
     "react-native": "^0.15.0-rc"
   },
   "dependencies": {
